--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>0.2.1</version>
         </dependency>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-maven-plugin</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.zalando</groupId>
             <artifactId>problem-spring-web</artifactId>
             <version>${problem.version}</version>
@@ -103,15 +108,15 @@
   <build>
     <pluginManagement>
       <plugins>
-        <plugin>
+          <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
-        <plugin>
+          <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
-        <plugin>
+          <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
@@ -119,26 +124,38 @@
             <target>11</target>
           </configuration>
         </plugin>
-        <plugin>
+          <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
-        <plugin>
+          <plugin>
           <artifactId>maven-war-plugin</artifactId>
           <version>3.2.2</version>
         </plugin>
-        <plugin>
+          <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
-        <plugin>
+          <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
-        <plugin>
+          <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
+          <plugin>
+              <groupId>org.springdoc</groupId>
+              <artifactId>springdoc-openapi-maven-plugin</artifactId>
+              <version>1.4</version>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>generate</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>
 <!--        <plugin>-->
 <!--          <groupId>org.springdoc</groupId>-->
 <!--          <artifactId>springdoc-openapi-maven-plugin</artifactId>-->
@@ -158,34 +175,35 @@
 <!--            <outputDir>src/main/java</outputDir>-->
 <!--          </configuration>-->
 <!--        </plugin>-->
-          <plugin>
-              <groupId>org.openapitools</groupId>
-              <artifactId>openapi-generator-maven-plugin</artifactId>
-              <version>5.4.0</version>
-              <executions>
-                  <execution>
-                      <goals>
-                          <goal>generate</goal>
-                      </goals>
-                      <configuration>
-                          <inputSpec>
-                              ${project.basedir}/server-app/src/main/resources/static/openapi.yml
-                          </inputSpec>
-                          <generatorName>java</generatorName>
-                          <configHelp>true</configHelp>
-<!--                          <packageName>com.company</packageName>-->
-<!--                          <apiPackage>com.company.rest</apiPackage>-->
-<!--                          <modelPackage>com.company.domain.model</modelPackage>-->
-                          <output>${project.basedir}/server-app/src/main/resources/static</output>
-                          <configOptions>
-                              <sourceFolder>swagger</sourceFolder>
-                              <delegatePattern>true</delegatePattern>
-                              <interfaceOnly>true</interfaceOnly>
-                          </configOptions>
-                      </configuration>
-                  </execution>
-              </executions>
-          </plugin>
+<!--              <plugin>-->
+<!--                  <groupId>org.openapitools</groupId>-->
+<!--                  <artifactId>openapi-generator-maven-plugin</artifactId>-->
+<!--                  <version>5.4.0</version>-->
+<!--                  <executions>-->
+<!--                      <execution>-->
+<!--                          <goals>-->
+<!--                              <goal>generate</goal>-->
+<!--                          </goals>-->
+<!--                          <configuration>-->
+<!--    &lt;!&ndash;                          <inputSpec>&ndash;&gt;-->
+<!--    &lt;!&ndash;                              ${project.basedir}/server-app/src/main/resources/static/openapi.yml&ndash;&gt;-->
+<!--    &lt;!&ndash;                          </inputSpec>&ndash;&gt;-->
+<!--                              <generatorName>java</generatorName>-->
+<!--                              <configHelp>true</configHelp>-->
+<!--    &lt;!&ndash;                          <packageName>com.company</packageName>&ndash;&gt;-->
+<!--    &lt;!&ndash;                          <apiPackage>com.company.rest</apiPackage>&ndash;&gt;-->
+<!--    &lt;!&ndash;                          <modelPackage>com.company.domain.model</modelPackage>&ndash;&gt;-->
+<!--                              <output>${project.basedir}/server-app/src/main/resources/static</output>-->
+<!--                              <configOptions>-->
+<!--                                  <sourceFolder>swagger</sourceFolder>-->
+<!--                                  <delegatePattern>true</delegatePattern>-->
+<!--                                  <interfaceOnly>true</interfaceOnly>-->
+<!--                                  <apiDocsUrl>/v3/api-docs</apiDocsUrl>-->
+<!--                              </configOptions>-->
+<!--                          </configuration>-->
+<!--                      </execution>-->
+<!--                  </executions>-->
+<!--              </plugin>-->
           <plugin>
           <groupId>org.liquibase</groupId>
           <artifactId>liquibase-maven-plugin</artifactId>
