--- a/server-app/src/main/resources/application.yaml
+++ b/server-app/src/main/resources/application.yaml
@@ -8,6 +8,17 @@ spring:
     password: qwerty
     driver-class-name: org.postgresql.Driver
 
+springdoc:
+#  api-docs:
+#    path: /api-docs
+  swagger-ui:
+    path: /
+#    use-root-path: true
+#    url: /v3/api-docs
+#    config-url: /v3/api-docs/swagger-config
+#    disable-swagger-default-url: true
+
+
 #  jpa:
 #    properties:
 #      hibernate:
@@ -48,10 +59,6 @@ logbook:
   logger:
     active: true
 
-
-springdoc:
-  swagger-ui:
-    path: /
 
 #springdoc:
 #  swagger-ui:
