--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,11 @@
             <artifactId>jackson-databind-nullable</artifactId>
             <version>0.2.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-maven-plugin</artifactId>
-            <version>1.4</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springdoc</groupId>-->
+<!--            <artifactId>springdoc-openapi-maven-plugin</artifactId>-->
+<!--            <version>1.4</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.zalando</groupId>
             <artifactId>problem-spring-web</artifactId>
@@ -144,67 +144,66 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
-          <plugin>
-              <groupId>org.springdoc</groupId>
-              <artifactId>springdoc-openapi-maven-plugin</artifactId>
-              <version>1.4</version>
-              <executions>
-                  <execution>
-                      <goals>
-                          <goal>generate</goal>
-                      </goals>
-                  </execution>
-              </executions>
-          </plugin>
-<!--        <plugin>-->
-<!--          <groupId>org.springdoc</groupId>-->
-<!--          <artifactId>springdoc-openapi-maven-plugin</artifactId>-->
-<!--          <version>5.4.0</version>-->
-<!--          <executions>-->
-<!--            <execution>-->
-<!--              <phase>integration-test</phase>;-->
-<!--              <goals>-->
-<!--                <goal>generate</goal>-->
-<!--              </goals>-->
-<!--            </execution>-->
-<!--          </executions>-->
-<!--          <configuration>-->
-<!--              <inputSpec>${project.basedir}/openapi.yml</inputSpec>-->
-<!--            <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>-->
-<!--            <outputFileName>openapi.yaml</outputFileName>-->
-<!--            <outputDir>src/main/java</outputDir>-->
-<!--          </configuration>-->
-<!--        </plugin>-->
-<!--              <plugin>-->
-<!--                  <groupId>org.openapitools</groupId>-->
-<!--                  <artifactId>openapi-generator-maven-plugin</artifactId>-->
-<!--                  <version>5.4.0</version>-->
-<!--                  <executions>-->
-<!--                      <execution>-->
-<!--                          <goals>-->
-<!--                              <goal>generate</goal>-->
-<!--                          </goals>-->
-<!--                          <configuration>-->
-<!--    &lt;!&ndash;                          <inputSpec>&ndash;&gt;-->
-<!--    &lt;!&ndash;                              ${project.basedir}/server-app/src/main/resources/static/openapi.yml&ndash;&gt;-->
-<!--    &lt;!&ndash;                          </inputSpec>&ndash;&gt;-->
-<!--                              <generatorName>java</generatorName>-->
-<!--                              <configHelp>true</configHelp>-->
-<!--    &lt;!&ndash;                          <packageName>com.company</packageName>&ndash;&gt;-->
-<!--    &lt;!&ndash;                          <apiPackage>com.company.rest</apiPackage>&ndash;&gt;-->
-<!--    &lt;!&ndash;                          <modelPackage>com.company.domain.model</modelPackage>&ndash;&gt;-->
-<!--                              <output>${project.basedir}/server-app/src/main/resources/static</output>-->
-<!--                              <configOptions>-->
-<!--                                  <sourceFolder>swagger</sourceFolder>-->
-<!--                                  <delegatePattern>true</delegatePattern>-->
-<!--                                  <interfaceOnly>true</interfaceOnly>-->
-<!--                                  <apiDocsUrl>/v3/api-docs</apiDocsUrl>-->
-<!--                              </configOptions>-->
-<!--                          </configuration>-->
-<!--                      </execution>-->
-<!--                  </executions>-->
-<!--              </plugin>-->
-          <plugin>
+<!--          <plugin>-->
+<!--              <groupId>org.springdoc</groupId>-->
+<!--              <artifactId>springdoc-openapi-maven-plugin</artifactId>-->
+<!--              <version>1.4</version>-->
+<!--              <executions>-->
+<!--                  <execution>-->
+<!--                      <goals>-->
+<!--                          <goal>generate</goal>-->
+<!--                      </goals>-->
+<!--                  </execution>-->
+<!--              </executions>-->
+<!--          </plugin>-->
+        <plugin>
+          <groupId>org.springdoc</groupId>
+          <artifactId>springdoc-openapi-maven-plugin</artifactId>
+          <version>5.4.0</version>
+          <executions>
+            <execution>
+              <phase>integration-test</phase>
+              <goals>
+                <goal>generate</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>
+            <outputFileName>openapi.yaml</outputFileName>
+            <outputDir>${project.basedir}/</outputDir>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.openapitools</groupId>
+          <artifactId>openapi-generator-maven-plugin</artifactId>
+          <version>5.4.0</version>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>generate</goal>
+                  </goals>
+                  <configuration>
+                      <inputSpec>
+                          ${project.basedir}/server-app/src/main/resources/static/openapi.yml
+                      </inputSpec>
+                      <generatorName>java</generatorName>
+                      <configHelp>true</configHelp>
+<!--                          <packageName>com.company</packageName>-->
+<!--                          <apiPackage>com.company.rest</apiPackage>-->
+<!--                          <modelPackage>com.company.domain.model</modelPackage>-->
+                      <output>${project.basedir}/server-app/src/main/resources/static</output>
+                      <configOptions>
+                          <sourceFolder>swagger</sourceFolder>
+                          <delegatePattern>true</delegatePattern>
+                          <interfaceOnly>true</interfaceOnly>
+                          <apiDocsUrl>/v3/api-docs</apiDocsUrl>
+                      </configOptions>
+                  </configuration>
+              </execution>
+          </executions>
+        </plugin>
+        <plugin>
           <groupId>org.liquibase</groupId>
           <artifactId>liquibase-maven-plugin</artifactId>
           <version>4.4.3</version>
