--- a/server-app/src/main/resources/application.yaml
+++ b/server-app/src/main/resources/application.yaml
@@ -9,10 +9,9 @@ spring:
     driver-class-name: org.postgresql.Driver
 
 springdoc:
-#  api-docs:
-#    path: /api-docs
   swagger-ui:
     path: /
+    url: /openapi.yml
 #    use-root-path: true
 #    url: /v3/api-docs
 #    config-url: /v3/api-docs/swagger-config
